--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+#LoadingScreen {
+	position: absolute;
+	top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  background: rgb(217,217,217);
+	text-align: center;
+  font-size: 100px;
+	z-index: 150;
+	display:block;
+}
+#loadingImage {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+}
+
 #overlay {
 	position: absolute;
 	top: 0;
