--- a/style.css
+++ b/style.css
@@ -19,6 +19,20 @@
     right: 0;
     bottom: 0;
 
+  }
+
+.heart{
+  max-height: 100%;
+
+}
+#healtBar {
+  display:none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+
 }
 
 #overlay {
